--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div id="wrapper">
 
         <div class="container">
-            <img src="/web_development/projects/Parallax_website/images/background.jpg" class="background" width="100%">
-            <img src="/web_development/projects/Parallax_website/images/foreground.png"
+            <img src="/images/background.jpg" class="background" width="100%">
+            <img src="/images/foreground.png"
               class="foreground" width="100%">
             <h1>ADVENTURE</h1>
         </div>
